# Rustty

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_SIGNING.md  LICENSE  NOTICE  README.en.md  README.md  SECURITY.md  eslint.config.js  index.html  jsconfig.json  migracion_IPC.md  package-lock.json  package.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
docs/: oauth-providers.md  themes.md
docs/themes/bundled/: 1-shell.json  agnoster-minimal.json  agnoster.json  agnosterplus.json  aliens.json  amro.json  apprentice.json  atomic.json  atomicbit.json  avit.json  ayu-dark.json  ayu-light.json  ayu-mirage.json  blue-owl.json  blueish.json  bubbles.json  bubblesextra.json  bubblesline.json  capr4n.json  catppuccin-frappe.json  catppuccin-macchiato.json  catppuccin.json  cert.json  chips.json  cinnamon.json  clean-detailed.json  cloud-context.json  cloud-native-azure.json  cobalt2.json  craver.json  darkblood.json  deus.json  devious-diamonds.json  di4am0nd.json  dracula-soft.json  easy-term.json  emodipt-extend.json  emodipt.json  everforest-dark.json  everforest-light.json  (+183 more)
packaging/: winget-datos.md
packaging/flatpak/: es.rustty.Rustty.desktop  es.rustty.Rustty.metainfo.xml  es.rustty.Rustty.yml
public/: boot.js
public/themes/: bundled-themes.json
scripts/: check-backlog.mjs  check-contrast.mjs  check-i18n.mjs  i18n-baseline.json  sync-version.mjs
src/: i18n.js  i18n.test.js  main.js  styles.css  sync.js
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_tray.rs  asbru.rs  atomic_file.rs  cli.rs  commands.rs  credentials.rs  error.rs  external_client.rs  ftp_fixture.rs  ftps_certs.rs  host_keys.rs  ipc.rs  keepass_manager.rs  keyring_scope.rs  lib.rs  local_command.rs  local_shell_manager.rs  locks.rs  main.rs  metrics.rs  notes.rs  profiles.rs  rdp_fixture.rs  rdp_manager.rs  sftp_manager.rs  ssh_fixture.rs  ssh_manager.rs  store_file.rs  sync.rs  tunnel_throttle.rs  webdav_fixture.rs
src-tauri/src/scripts/: mod.rs  runner.rs  store.rs  types.rs
src-tauri/src/subst/: engine.rs  mod.rs  redact.rs  types.rs
src/modules/: command-suggest.js  command-suggest.test.js  datetime.js  datetime.test.js  format.js  format.test.js  html.js  html.test.js  markdown.js  markdown.test.js  metrics-view.js  metrics-view.test.js  num.js  num.test.js  passphrase.js  passphrase.test.js  path-history.js  path-history.test.js  platform.js  platform.test.js  shell-quote.js  shell-quote.test.js  subst.js  subst.test.js  text.js  text.test.js  wake.js  wake.test.js
src/modules/ipc/: events.js  events.test.js
src/modules/scripts/: model.js  model.test.js  recorder.js  recorder.test.js  runbook.js  runbook.test.js  targets.js  targets.test.js
src/modules/shortcuts/: combo.js  combo.test.js
src/modules/terminal/: highlight.js  highlight.test.js
src/modules/themes/: document.js  document.test.js
web/: index.html
web/docs/: Atajos.md  CLI.md  ClientesExternos.md  Copias.md  FAQ.md  Firma.md  Importar.md  Inicio.md  Instalacion.md  KeePass.md  Monitor.md  Notas.md  Perfiles.md  SFTP.md  Scripts.md  Seguridad.md  Temas.md  Tuneles.md  index.html
web/partials/: footer.html
