[package]
name = "rustty"
version = "1.5.1"
description = "Rustty - Cliente SSH multiplataforma de escritorio"
authors = ["Alejandro Soriano"]
license = "Apache-2.0"
repository = "https://github.com/Aleixenandros/Rustty"
edition = "2021"

[lib]
name = "rustty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Persistencia automática de tamaño y posición de la ventana entre ejecuciones
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# russh + russh-sftp: cliente SSH/SFTP puro en Rust. Lo usan tanto el shell
# interactivo (ssh_manager) como el explorador de ficheros (sftp_manager);
# nos permite arrancar un sftp-server elevado con `sudo` sobre un canal exec.
russh = "0.50"
russh-sftp = "2"
suppaftp = { version = "8.0.3", features = ["rustls-ring"] }
webpki-roots = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "io-std", "sync", "fs", "macros", "time"] }
# CLI SSH sin interfaz gráfica: modo raw del terminal y prompts secretos.
crossterm = "0.29"
rpassword = "7"
# Combinadores de futuros para pipelining SFTP (FuturesUnordered).
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
async-trait = "0.1"
# PTY multiplataforma para la shell local
portable-pty = "0.9"
# Almacenamiento seguro de credenciales en el keystore del SO.
# En Linux usamos Secret Service como almacén persistente; keyutils por sí solo
# vive en memoria de kernel y se pierde tras reiniciar.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
# Generación de UUIDs para IDs de sesión y perfil
uuid = { version = "1", features = ["v4"] }
# Directorios del sistema (app data dir)
dirs = "6"
# Manejo ergonómico de errores
thiserror = "2"
# Lectura de bases de datos KeePass (.kdbx)
keepass = "0.10"
# Enumeración de fuentes del sistema para el selector de familia del terminal
fontdb = "0.23"
# Sincronización en la nube: crypto + HTTP + timestamps
# `age` provee cifrado simétrico con passphrase (scrypt + ChaCha20-Poly1305)
# en formato estándar. `chrono` para timestamps de los items con LWW.
# `reqwest` con rustls (sin openssl) para WebDAV/APIs cloud. `urlencoding`
# para escapar rutas/queries y `sha2`/`base64` para PKCE OAuth.
age = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "query", "form"] }
urlencoding = "2"
sha2 = "0.11"
base64 = "0.22"
tauri-plugin-clipboard-manager = "2"
