[package]
name = "rustty"
version = "1.47.0"
description = "Rustty - Cliente SSH multiplataforma de escritorio"
authors = ["Alejandro Soriano"]
license = "Apache-2.0"
repository = "https://github.com/Aleixenandros/Rustty"
edition = "2021"

[lib]
name = "rustty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Persistencia automática de tamaño y posición de la ventana entre ejecuciones
tauri-plugin-window-state = "2"
# Logs técnicos de diagnóstico a fichero con rotación acotada (no contenido de
# terminal ni secretos). Nivel Debug en dev, Info en release. `log` es la fachada.
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# russh + russh-sftp: cliente SSH/SFTP puro en Rust. Lo usan tanto el shell
# interactivo (ssh_manager) como el explorador de ficheros (sftp_manager);
# nos permite arrancar un sftp-server elevado con `sudo` sobre un canal exec.
# feature "des": habilita 3des-cbc para servidores legacy muy antiguos.
russh = { version = "0.62", features = ["des"] }
russh-sftp = "2.3"
suppaftp = { version = "10.0.0", features = ["rustls-ring"] }
webpki-roots = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "io-std", "sync", "fs", "macros", "time"] }
# Configuración fina de sockets TCP (SO_KEEPALIVE + TCP_KEEPIDLE/INTVL) para
# detectar caídas de NAT/microcortes en sesiones SSH/SFTP idle.
socket2 = { version = "0.6", features = ["all"] }
# CLI SSH sin interfaz gráfica: modo raw del terminal y prompts secretos.
crossterm = "0.29"
rpassword = "7"
# Combinadores de futuros para pipelining SFTP (FuturesUnordered).
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
async-trait = "0.1"
# PTY multiplataforma para la shell local
portable-pty = "0.9"
# Almacenamiento seguro de credenciales en el keystore del SO.
# En Linux usamos Secret Service como almacén persistente; keyutils por sí solo
# vive en memoria de kernel y se pierde tras reiniciar.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
# Generación de UUIDs para IDs de sesión y perfil
uuid = { version = "1", features = ["v4"] }
# Directorios del sistema (app data dir)
dirs = "6"
# Manejo ergonómico de errores
thiserror = "2"
# Lectura de bases de datos KeePass (.kdbx)
keepass = "0.13"
# Enumeración de fuentes del sistema para el selector de familia del terminal
fontdb = "0.23"
# Sincronización en la nube: crypto + HTTP + timestamps
# `age` provee cifrado simétrico con passphrase (scrypt + ChaCha20-Poly1305)
# en formato estándar. `chrono` para timestamps de los items con LWW.
# `reqwest` con rustls (sin openssl) para WebDAV/APIs cloud. `urlencoding`
# para escapar rutas/queries y `sha2`/`base64` para PKCE OAuth.
age = "0.11"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "query", "form"] }
urlencoding = "2"
sha2 = "0.11"
base64 = "0.22"
tauri-plugin-clipboard-manager = "2"
# Importador de Ásbrú Connection Manager: parseo YAML + descifrado de contraseñas
# (Blowfish-CBC con KDF de OpenSSL/MD5). WebCrypto no ofrece ni Blowfish ni MD5,
# por eso este flujo vive en el backend.
# `serde_yaml_ng` es la continuación mantenida de `serde_yaml` (mismo API, línea
# 0.10): el `serde_yaml` original quedó archivado (0.9.34+deprecated) y el fork
# `serde_yml` también pasó a estar sin mantenimiento.
serde_yaml_ng = "0.10"
blowfish = "0.10"
md-5 = "0.11"
hex = "0.4"
# Arranque automático con el sistema (opt-in). Se usa el crate `auto-launch`
# directamente para construir la entrada de autostart con o sin `--minimized`
# y para consultar su estado, sin depender de un plugin adicional.
auto-launch = "0.6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# Coincidencia de patrones para el paso `waitRegex` del motor de scripts. Ya
# presente en el árbol de dependencias; se declara directo para poder usarlo.
regex = "1.12.4"
